--- a/msg_bag/CMakeLists.txt
+++ b/msg_bag/CMakeLists.txt
@@ -22,7 +22,7 @@ add_executable(record
     src/record/record.cpp
     src/conf/msgbag_conf.cpp
     src/record/recorder.cpp
-    src/common/msgbag_constants.cpp
+    src/common/util.cpp
     src/common/thread_pool.cpp
     src/storage/bag.cpp
     src/common/buffer.cpp
@@ -36,6 +36,11 @@ ENDIF()
 add_executable(play
     src/play/play.cpp
     src/conf/msgbag_conf.cpp
+    src/common/pub_sub.cpp
+    src/play/player.cpp
+    src/storage/bag.cpp
+    src/common/buffer.cpp
+    src/common/util.cpp
     ${PROTOCOL_SRC}
     )
 IF($ENV{CROSS_COMPILING_TYPE} MATCHES "qnx")
